--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-PORT="3000"
-NEXT_PUBLIC_DATABASE_URL="http://127.0.0.1:8080"
+NEXT_PUBLIC_ENVIRONMENT="local"
+NEXT_PUBLIC_DATABASE_URL=""
 NEXT_PUBLIC_DATABASE_AUTH_TOKEN=""
