feat: elysia swagger setup

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "turso:db-info": "turso db show gifts-app",
     "turso:create-token": "turso db tokens create gifts-app -e none",
     "turso:dev": "turso dev --db-file local.db",
     "drizzle:generate": "drizzle-kit generate",
@@ -14,8 +15,10 @@
     "drizzle:studio": "drizzle-kit studio"
   },
   "dependencies": {
+    "@elysiajs/swagger": "^1.0.5",
     "@libsql/client": "^0.6.0",
     "drizzle-orm": "^0.30.10",
+    "elysia": "^1.0.22",
     "next": "14.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
