--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "14.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "tw-merge": "^0.0.1-alpha.3",
     "ulid": "^2.3.0"
   },
   "devDependencies": {
