--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-NEXT_PUBLIC_ENVIRONMENT="local"
-NEXT_PUBLIC_DATABASE_URL=""
-NEXT_PUBLIC_DATABASE_AUTH_TOKEN=""
+ENVIRONMENT="local"
+DATABASE_URL=""
+DATABASE_AUTH_TOKEN=""
