--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "14.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.51.5",
     "tailwind-merge": "^2.3.0",
     "ulid": "^2.3.0"
   },
